feat: update API, models, migration, dan image upload (V3)
