# app/Models/User.php
@@ -3,18 +3,48 @@
 namespace App\Models;
 
 use Illuminate\Foundation\Auth\User as Authenticatable;
+use Illuminate\Database\Eloquent\SoftDeletes;
 use Laravel\Sanctum\HasApiTokens;
+use OpenApi\Annotations as OA;
 
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     title="User",
+ *     description="User model",
+ *     type="object",
+ *     required={"id","name","email","role_id","is_active"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="name", type="string", example="John Doe"),
+ *     @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+ *     @OA\Property(property="role_id", type="integer", example=2),
+ *     @OA\Property(property="is_active", type="boolean", example=true),
+ *     @OA\Property(
+ *         property="profile_img",
+ *         type="string",
+ *         nullable=true,
+ *         example="uploads/profiles/uuid.jpg"
+ *     ),
+ *     @OA\Property(
+ *         property="last_login_at",
+ *         type="string",
+ *         format="date-time",
+ *         nullable=true
+ *     ),
+ *     @OA\Property(property="created_at", type="string", format="date-time"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time")
+ * )
+ */
 class User extends Authenticatable
 {
-    use HasApiTokens;
+    use HasApiTokens, SoftDeletes;
+
     protected $fillable = [
         'name',
         'email',
         'password',
         'role_id',
         'is_active',
-        'is_deleted',
         'profile_img',
         'last_login_at',
     ];
@@ -25,9 +55,8 @@ class User extends Authenticatable
 
     protected static function booted()
     {
-        static::addGlobalScope('active', function ($query) {
-            $query->where('is_active', true)
-                ->where('is_deleted', false);
+        static::addGlobalScope('active_user', function ($query) {
+            $query->where('is_active', true);
         });
     }
 
@@ -49,10 +78,4 @@ class User extends Authenticatable
     }
 
     /* ================== QUERY SCOPE ================== */
-
-    public function scopeActive($query)
-    {
-        return $query->where('is_active', true)
-            ->where('is_deleted', false);
-    }
 }
